--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,9 +10,28 @@ on:
       deployPrimeUrl:
         description: Deployed URL
         required: true
+        default: 'https://todomvc-no-tests.netlify.app/'
 jobs:
+  # example job showing the Netlify information
   show-event:
     runs-on: ubuntu-20.04
     steps:
       - run: echo "Testing url ${{ github.event.inputs.deployPrimeUrl }}"
       - run: echo "Site name ${{ github.event.inputs.siteName }}"
+
+  tests:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # https://github.com/cypress-io/github-action
+      # Installs and caches dependencies, runs all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          # we want to test the URL passed by Netlify
+          config: baseUrl=${{ github.event.inputs.deployPrimeUrl }}
+          # store video and screenshots on Cypress Dashboard
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
