--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -63,7 +63,7 @@ jobs:
           # let's grab it from the Cypress step outcomes
           # https://github.com/cypress-io/github-action#outputs
           state: ${{ steps.cypress.outcome }}
-          owner: 'bahmutov'
+          owner: 'krobus00'
           repository: 'todomvc-no-tests'
           sha: ${{github.event.inputs.commit}}
           target_url: ${{ steps.cypress.outputs.dashboardUrl }}
